--- a/app/src/main/res/layout/activity_requests.xml
+++ b/app/src/main/res/layout/activity_requests.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
     android:id="@+id/main"
+    android:background="#FFFFFF"
     android:layout_height="match_parent">
 
     <ScrollView
@@ -28,6 +29,7 @@
                 android:layout_marginTop="40dp">
 
                 <LinearLayout
+                    android:id="@+id/followingbutton"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
