--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -15,18 +15,17 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_centerInParent="true"
-        android:layout_margin="16dp"
-        android:src="@drawable/pfp" />
+        android:src="@drawable/seven" />
 
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Muqarrab"
+        android:text="joshua__"
         android:layout_below="@id/callpicture"
         android:layout_centerInParent="true"
         android:layout_marginTop="10dp"
-        android:textSize="40sp"
+        android:textSize="30sp"
         android:fontFamily="@font/opensans"
         android:textStyle="bold"
         android:textColor="#ffffff"
@@ -41,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/name"
         android:layout_centerInParent="true"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:text="03:12"
         android:fontFamily="@font/opensans"
         android:textStyle="bold"
@@ -51,6 +50,7 @@
 
 
     <ImageView
+        android:id="@+id/endCall"
         android:layout_width="80dp"
         android:layout_height="70dp"
         android:layout_centerInParent="true"
@@ -67,7 +67,7 @@
         android:layout_centerInParent="true"
         android:src="@drawable/phone"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="70dp"
 
         />
 
