--- a/app/src/main/res/layout/activity_dm.xml
+++ b/app/src/main/res/layout/activity_dm.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="#FFFFFF"
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
     android:layout_height="match_parent"
@@ -24,14 +25,16 @@
             android:gravity="center_vertical">
 
             <ImageView
+                android:id="@+id/goback"
                 android:layout_width="40dp"
+                android:clickable="true"
                 android:layout_height="40dp"
                 android:src="@drawable/img_7" />
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/ten"
+                android:src="@drawable/seven"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
                 android:layout_marginLeft="10dp" />
@@ -62,7 +65,7 @@
             <ImageView
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:src="@drawable/info" />
+                android:src="@drawable/info_sign" />
         </LinearLayout>
     </LinearLayout>
 
