--- a/app/src/main/res/layout/activity_following_notif.xml
+++ b/app/src/main/res/layout/activity_following_notif.xml
@@ -52,11 +52,14 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/youbutton"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:clickable="true"
+                    >
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -373,7 +376,7 @@
         android:background="#FFFFFF">
 
         <ImageView
-            android:id="@+id/buttonhome"
+            android:id="@+id/buttonhomeicon"
             android:layout_width="0dp"
             android:layout_height="25dp"
             android:layout_weight="1"
@@ -381,7 +384,7 @@
             android:layout_gravity="center"/>
 
         <ImageView
-            android:id="@+id/buttonsearch"
+            android:id="@+id/buttonsearchicon"
             android:layout_width="0dp"
             android:layout_height="25dp"
             android:layout_weight="1"
@@ -389,7 +392,7 @@
             android:layout_gravity="center"/>
 
         <ImageView
-            android:id="@+id/buttonpost"
+            android:id="@+id/buttonposticon"
             android:layout_width="0dp"
             android:layout_height="25dp"
             android:layout_weight="1"
@@ -404,7 +407,7 @@
             android:layout_gravity="center"/>
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/buttonprofile"
+            android:id="@+id/buttonprofileicon"
             android:layout_width="0dp"
             android:layout_height="25dp"
             android:layout_weight="1"
