--- a/app/src/main/res/layout/activity_image_selection.xml
+++ b/app/src/main/res/layout/activity_image_selection.xml
@@ -98,7 +98,7 @@
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/stop"/>
+                    android:src="@drawable/select"/>
 
                 <TextView
                     android:layout_width="wrap_content"
