--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -15,13 +15,13 @@
         android:layout_above="@+id/bottom_navigation">
 
         <RelativeLayout
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp">
 
             <ImageView
                 android:id="@+id/camera"
+                android:clickable="true"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:src="@drawable/img_53"
@@ -42,7 +42,7 @@
                 android:layout_alignTop="@id/camera" />
 
             <ImageView
-                android:id="@+id/directmessage"
+                android:id="@+id/message_button"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:src="@drawable/img_1"
@@ -102,7 +102,7 @@
                                 android:layout_height="match_parent"
                                 android:src="@drawable/pfp"
                                 app:civ_border_width="2dp"
-                                app:civ_border_color="#d3d5d9" />
+                                app:civ_border_color="#AF1974" />
 
                             <de.hdodenhof.circleimageview.CircleImageView
                                 android:layout_width="98dp"
@@ -142,7 +142,7 @@
                                 android:layout_height="match_parent"
                                 android:src="@drawable/ten"
                                 app:civ_border_width="2dp"
-                                app:civ_border_color="#d3d5d9" />
+                                app:civ_border_color="#AF1974" />
 
                             <de.hdodenhof.circleimageview.CircleImageView
                                 android:layout_width="98dp"
@@ -172,6 +172,7 @@
                         android:orientation="vertical">
 
                         <FrameLayout
+                            android:clickable="true"
                             android:layout_width="100dp"
                             android:layout_height="100dp">
 
@@ -179,16 +180,16 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:src="@drawable/eleven"
-                                app:civ_border_color="#d3d5d9"
-                                app:civ_border_width="2dp" />
+                                app:civ_border_width="2dp"
+                                app:civ_border_color="#AF1974" />
 
                             <de.hdodenhof.circleimageview.CircleImageView
                                 android:layout_width="98dp"
                                 android:layout_height="98dp"
-                                android:layout_gravity="center"
                                 android:src="@drawable/eleven"
+                                app:civ_border_width="3dp"
                                 app:civ_border_color="#FAFAFA"
-                                app:civ_border_width="3dp" />
+                                android:layout_gravity="center" />
                         </FrameLayout>
 
                         <TextView
@@ -210,20 +211,21 @@
                         android:gravity="center_horizontal">
 
                         <FrameLayout
+                            android:clickable="true"
                             android:layout_width="100dp"
                             android:layout_height="100dp">
 
                             <de.hdodenhof.circleimageview.CircleImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:src="@drawable/five"
+                                android:src="@drawable/one"
                                 app:civ_border_width="2dp"
-                                app:civ_border_color="#d3d5d9" />
+                                app:civ_border_color="#AF1974" />
 
                             <de.hdodenhof.circleimageview.CircleImageView
                                 android:layout_width="98dp"
                                 android:layout_height="98dp"
-                                android:src="@drawable/five"
+                                android:src="@drawable/one"
                                 app:civ_border_width="3dp"
                                 app:civ_border_color="#FAFAFA"
                                 android:layout_gravity="center" />
@@ -248,20 +250,21 @@
                         android:gravity="center_horizontal">
 
                         <FrameLayout
+                            android:clickable="true"
                             android:layout_width="100dp"
                             android:layout_height="100dp">
 
                             <de.hdodenhof.circleimageview.CircleImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:src="@drawable/sixteen"
+                                android:src="@drawable/six"
                                 app:civ_border_width="2dp"
-                                app:civ_border_color="#d3d5d9" />
+                                app:civ_border_color="#AF1974" />
 
                             <de.hdodenhof.circleimageview.CircleImageView
                                 android:layout_width="98dp"
                                 android:layout_height="98dp"
-                                android:src="@drawable/sixteen"
+                                android:src="@drawable/six"
                                 app:civ_border_width="3dp"
                                 app:civ_border_color="#FAFAFA"
                                 android:layout_gravity="center" />
@@ -286,6 +289,7 @@
                         android:gravity="center_horizontal">
 
                         <FrameLayout
+                            android:clickable="true"
                             android:layout_width="100dp"
                             android:layout_height="100dp">
 
@@ -294,7 +298,7 @@
                                 android:layout_height="match_parent"
                                 android:src="@drawable/twelve"
                                 app:civ_border_width="2dp"
-                                app:civ_border_color="#d3d5d9" />
+                                app:civ_border_color="#AF1974" />
 
                             <de.hdodenhof.circleimageview.CircleImageView
                                 android:layout_width="98dp"
@@ -338,10 +342,10 @@
                 android:gravity="center_vertical">
 
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/mainpicture"
+                    android:id="@+id/mainpictureee"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/ten" />
+                    android:src="@drawable/six" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -375,20 +379,47 @@
                     android:src="@drawable/dots" />
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/imagepost"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="400dp"
                 android:layout_below="@id/info"
-                android:layout_marginTop="5dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/postt" />
+                android:id="@+id/imagepost"
+                android:layout_marginTop="5dp">
+
+                <ImageView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ten" />
+
+                <TextView
+                    android:id="@+id/post_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_margin="8dp"
+                    android:text="1/3"
+                    android:textColor="#FFFFFF"
+                    android:padding="4dp"
+                    android:background="@drawable/loginbutton3" />
+
+            </RelativeLayout>
+
 
             <RelativeLayout
                 android:id="@+id/postIcons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/imagepost">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/img_62"/>
+
 
                 <ImageView
                     android:layout_width="40dp"
@@ -435,7 +466,7 @@
                 android:gravity="center_vertical">
 
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/postpicture"
+                    android:id="@+id/thirteen"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/twelve"
@@ -491,6 +522,175 @@
                 android:clickable="true"
                 android:layout_height="5dp"
                 android:layout_below="@id/informationssss"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="10dp"
+                android:background="#E7E7E7" />
+
+            <LinearLayout
+                android:id="@+id/info2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/lastline"
+                android:layout_marginTop="25dp"
+                android:orientation="horizontal"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:gravity="center_vertical">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/mainpicture2"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ten" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginStart="12dp"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/username2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="kylian"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:textColor="#000000" />
+
+                    <TextView
+                        android:id="@+id/location2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Manchester,UK"
+                        android:textSize="14sp"
+                        android:textColor="#666666" />
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/dots2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/dots" />
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/imagepost2"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:layout_below="@id/info2"
+                android:layout_marginTop="5dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/twelve" />
+
+            <RelativeLayout
+                android:id="@+id/postIcons2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagepost2">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/heart"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp" />
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/save"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginTop="16dp" />
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/comment"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="70dp"
+                    android:layout_marginTop="16dp" />
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/send"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="120dp"
+                    android:layout_marginTop="16dp" />
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_marginTop="5dp"
+                android:id="@+id/allinfo2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/postIcons2"
+                android:orientation="horizontal"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:gravity="center_vertical">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/postpicture2"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/twelve"
+                    android:layout_marginStart="8dp" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginStart="12dp"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/post_text4"
+                        android:textSize="16sp"
+                        android:textColor="#000000" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/informationssss2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/allinfo2"
+                android:orientation="horizontal"
+                android:paddingStart="16dp"
+                android:layout_marginTop="10dp"
+                android:paddingEnd="16dp"
+                android:gravity="center_vertical">
+
+                <LinearLayout
+                    android:id="@+id/nextinfo2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginStart="2dp"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/post_text"
+                        android:textSize="16sp"
+                        android:textColor="#000000" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <View
+                android:id="@+id/lastline2"
+                android:layout_width="wrap_content"
+                android:clickable="true"
+                android:layout_height="5dp"
+                android:layout_below="@id/informationssss2"
                 android:layout_centerInParent="true"
                 android:layout_marginTop="10dp"
                 android:background="#E7E7E7" />
