--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -5,7 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
-
     android:background="#FFFFFF"
     android:layout_height="match_parent"
     tools:context=".message">
@@ -34,6 +33,8 @@
         />
 
     <ImageView
+        android:clickable="true"
+        android:id="@+id/gobackagain"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginTop="25dp"
@@ -59,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Search"
-            android:backgroundTint="@drawable/searchbar"
+
             android:drawableStart="@drawable/img_51"
             android:background="@null"
             android:drawablePadding="10dp"
@@ -73,7 +74,7 @@
 
     <LinearLayout
         android:clickable="true"
-        android:id="@+id/first"
+        android:id="@+id/firstmessage"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_below="@id/search"
@@ -116,7 +117,8 @@
             android:layout_weight="1">
 
             <TextView
-
+                android:clickable="true"
+                android:id="@+id/fistimage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="joshusa__"
@@ -167,11 +169,11 @@
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/second"
+        android:id="@+id/secondmessage"
         android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_below="@id/first"
+        android:layout_below="@id/firstmessage"
         android:layout_marginTop="40dp"
         android:orientation="horizontal"
         android:paddingStart="16dp"
@@ -262,11 +264,11 @@
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/third"
+        android:id="@+id/thirdmessage"
         android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_below="@id/second"
+        android:layout_below="@id/secondmessage"
         android:layout_marginTop="40dp"
         android:orientation="horizontal"
         android:paddingStart="16dp"
@@ -357,11 +359,11 @@
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/fourth"
+        android:id="@+id/fourthmessage"
         android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_below="@id/third"
+        android:layout_below="@id/thirdmessage"
         android:layout_marginTop="40dp"
         android:orientation="horizontal"
         android:paddingStart="16dp"
