--- a/app/src/main/res/layout/activity_search_page.xml
+++ b/app/src/main/res/layout/activity_search_page.xml
@@ -123,6 +123,7 @@
 
     <LinearLayout
         android:id="@+id/first"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_below="@id/options"
@@ -133,14 +134,30 @@
         android:gravity="center_vertical">
 
 
-        <de.hdodenhof.circleimageview.CircleImageView
-
+        <FrameLayout
+            android:id="@+id/mystory"
+            android:clickable="true"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/one"
             android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            />
+            android:layout_marginBottom="4dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/fourteen"
+                app:civ_border_width="2dp"
+                app:civ_border_color="#AF1974" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="76dp"
+                android:layout_height="76dp"
+                android:src="@drawable/fourteen"
+                app:civ_border_width="3dp"
+                app:civ_border_color="#FAFAFA"
+                android:layout_gravity="center" />
+        </FrameLayout>
+
 
 
         <LinearLayout
@@ -155,7 +172,7 @@
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="NIG"
+                android:text="Kyan.coleman"
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:textColor="#000000" />
@@ -183,14 +200,30 @@
         android:gravity="center_vertical">
 
 
-        <de.hdodenhof.circleimageview.CircleImageView
-
+        <FrameLayout
+            android:id="@+id/mystory"
+            android:clickable="true"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/two"
             android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            />
+            android:layout_marginBottom="4dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/two"
+                app:civ_border_width="2dp"
+                app:civ_border_color="#AF1974" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="76dp"
+                android:layout_height="76dp"
+                android:src="@drawable/two"
+                app:civ_border_width="3dp"
+                app:civ_border_color="#FAFAFA"
+                android:layout_gravity="center" />
+        </FrameLayout>
+
 
 
         <LinearLayout
@@ -232,15 +265,30 @@
         android:paddingEnd="16dp"
         android:gravity="center_vertical">
 
-        <!-- Profile picture -->
-        <de.hdodenhof.circleimageview.CircleImageView
-
+        <FrameLayout
+            android:id="@+id/mystory"
+            android:clickable="true"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/three"
             android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            />
+            android:layout_marginBottom="4dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/three"
+                app:civ_border_width="2dp"
+                app:civ_border_color="#AF1974" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="76dp"
+                android:layout_height="76dp"
+                android:src="@drawable/three"
+                app:civ_border_width="3dp"
+                app:civ_border_color="#FAFAFA"
+                android:layout_gravity="center" />
+        </FrameLayout>
+
 
 
         <LinearLayout
@@ -283,14 +331,30 @@
         android:gravity="center_vertical">
 
 
-        <de.hdodenhof.circleimageview.CircleImageView
-
+        <FrameLayout
+            android:id="@+id/mystory"
+            android:clickable="true"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/four"
             android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            />
+            android:layout_marginBottom="4dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/four"
+                app:civ_border_width="2dp"
+                app:civ_border_color="#AF1974" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="76dp"
+                android:layout_height="76dp"
+                android:src="@drawable/four"
+                app:civ_border_width="3dp"
+                app:civ_border_color="#FAFAFA"
+                android:layout_gravity="center" />
+        </FrameLayout>
+
 
 
         <LinearLayout
@@ -332,15 +396,30 @@
         android:paddingEnd="16dp"
         android:gravity="center_vertical">
 
-        <!-- Profile picture -->
-        <de.hdodenhof.circleimageview.CircleImageView
-
+        <FrameLayout
+            android:id="@+id/mystory"
+            android:clickable="true"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/ten"
             android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            />
+            android:layout_marginBottom="4dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/ten"
+                app:civ_border_width="2dp"
+                app:civ_border_color="#AF1974" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="76dp"
+                android:layout_height="76dp"
+                android:src="@drawable/ten"
+                app:civ_border_width="3dp"
+                app:civ_border_color="#FAFAFA"
+                android:layout_gravity="center" />
+        </FrameLayout>
+
 
 
         <LinearLayout
@@ -382,15 +461,30 @@
         android:paddingEnd="16dp"
         android:gravity="center_vertical">
 
-        <!-- Profile picture -->
-        <de.hdodenhof.circleimageview.CircleImageView
-
+        <FrameLayout
+            android:id="@+id/mystory"
+            android:clickable="true"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/eleven"
             android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            />
+            android:layout_marginBottom="4dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/eleven"
+                app:civ_border_width="2dp"
+                app:civ_border_color="#AF1974" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="76dp"
+                android:layout_height="76dp"
+                android:src="@drawable/eleven"
+                app:civ_border_width="3dp"
+                app:civ_border_color="#FAFAFA"
+                android:layout_gravity="center" />
+        </FrameLayout>
+
 
 
         <LinearLayout
